# cub_sliding_window

./: CMakeLists.txt  InstallCUDAAPIWrappersCMakeModule.sh  README.md  TIMING_NOTES  timings_sweep.sh  unroll_sweep.sh
include/: KernelSel.h  SlidingWindow.cuh  SlidingWindowConfig.cuh  cuda_utils.h  my_float2.h  sliding_window.cuh  sliding_window_kernel.cuh  utils.h
src/: SlidingWindow.cu  main.cpp  my_float2.cpp  sliding_window.cu  sliding_window_kernel.cu
